# koopmotion

./: LICENSE  README.md  data_getter.py  evaluation.py  generate_lasa_data.py  koopman_model.py  loss.py  plotter_new.py  pyproject.toml  reconstruct.py  requirements.txt  run_training.py  train.py
configuration_files/lasa_angle/: model_config.yaml
configuration_files/lasa_bended_line/: model_config.yaml~
configuration_files/lasa_g/: model_config.yaml~
configuration_files/lasa_heee/: model_config.yaml~
configuration_files/lasa_j/: model_config.yaml~
configuration_files/lasa_j2/: model_config.yaml~
configuration_files/lasa_khamesh/: model_config.yaml~
configuration_files/lasa_l/: model_config.yaml~
configuration_files/lasa_leaf1/: model_config.yaml~
configuration_files/lasa_leaf2/: model_config.yaml~
configuration_files/lasa_line/: model_config.yaml~
configuration_files/lasa_mm1/: model_config.yaml~
configuration_files/lasa_mm2/: model_config.yaml~
configuration_files/lasa_mm3/: model_config.yaml~
configuration_files/lasa_mm4/: model_config.yaml~
configuration_files/lasa_n/: model_config.yaml~
configuration_files/lasa_p/: model_config.yaml~
configuration_files/lasa_r/: model_config.yaml~
configuration_files/lasa_s/: model_config.yaml~
configuration_files/lasa_saeghe/: model_config.yaml~
configuration_files/lasa_sharpc/: model_config.yaml~
configuration_files/lasa_sine/: model_config.yaml  model_config.yaml~
configuration_files/lasa_snake/: model_config.yaml  (+1 more)
scripts/: generate_lasa_data.py  run_evaluation.py  run_training.py
(+18 files in other folders)
